--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
-  "name": "console-browser",
+  "name": "shellchrome",
   "version": "1.0.0",
   "description": "基于 chrome-devtools-mcp 的 Node.js 中文控制台浏览器",
   "type": "module",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "pkg . --output dist/shellchrome"
+  },
+  "pkg": {
+    "scripts": [
+      "renderer.js",
+      "browser.js",
+      "ocr.js"
+    ],
+    "assets": [
+      "node_modules/sharp",
+      "node_modules/tesseract.js"
+    ],
+    "targets": [
+      "node20-linux-x64",
+      "node20-win-x64"
+    ],
+    "compress": "GZip"
   },
   "keywords": [
     "chrome",
@@ -21,5 +39,8 @@
     "chrome-devtools-mcp": "^0.17.3",
     "sharp": "^0.33.0",
     "tesseract.js": "^7.0.0"
+  },
+  "devDependencies": {
+    "@yao-pkg/pkg": "latest"
   }
 }
