--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,17 +24,10 @@ jobs:
           node-version: 20.x
 
       - name: Install dependencies
-        run: npm i
-
-      - name: Install @yao-pkg/pkg
-        run: npm install -g @yao-pkg/pkg
+        run: npm ci
 
       - name: Build Linux executable
-        run: |
-          pkg index.js \
-            --target node20-linux-x64 \
-            --output ./dist/shellchrome-linux \
-            --compress GZip
+        run: npx pkg . --target node20-linux-x64 --output ./dist/shellchrome-linux --compress GZip
 
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
@@ -53,17 +46,10 @@ jobs:
           node-version: 20.x
 
       - name: Install dependencies
-        run: npm i
-
-      - name: Install @yao-pkg/pkg
-        run: npm install -g @yao-pkg/pkg
+        run: npm ci
 
       - name: Build Windows executable
-        run: |
-          pkg index.js `
-            --target node20-win-x64 `
-            --output ./dist/shellchrome.exe `
-            --compress GZip
+        run: npx pkg . --target node20-win-x64 --output ./dist/shellchrome.exe --compress GZip
         shell: pwsh
 
       - name: Upload Windows artifact
