--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: 20.x
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build Linux executable
         run: npx pkg . --target node20-linux-x64 --output ./dist/shellchrome-linux --compress GZip
@@ -46,7 +46,7 @@ jobs:
           node-version: 20.x
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build Windows executable
         run: npx pkg . --target node20-win-x64 --output ./dist/shellchrome.exe --compress GZip
