--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js 20.x
+      - name: Setup Node.js 18.x
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 18.x
 
       - name: Install dependencies
         run: npm install
 
       - name: Build Linux executable
-        run: npx pkg . --target node20-linux-x64 --output ./dist/shellchrome-linux --compress GZip
+        run: |
+          nexe index.js \
+            --target linux-x64-18.x \
+            --output ./dist/shellchrome-linux \
+            --build
 
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
@@ -40,16 +44,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js 20.x
+      - name: Setup Node.js 18.x
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 18.x
 
       - name: Install dependencies
         run: npm install
 
       - name: Build Windows executable
-        run: npx pkg . --target node20-win-x64 --output ./dist/shellchrome.exe --compress GZip
+        run: |
+          nexe index.js `
+            --target windows-x64-18.x `
+            --output ./dist/shellchrome.exe `
+            --build
         shell: pwsh
 
       - name: Upload Windows artifact
