--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "index.js",
   "scripts": {
     "start": "node index.js",
-    "bundle": "esbuild index.js --bundle --platform=node --target=node20 --outfile=dist/bundle.js --external:chrome-devtools-mcp",
+    "bundle": "esbuild index.js --bundle --platform=node --target=node20 --outfile=dist/bundle.js --external:sharp --external:tesseract.js --external:chrome-devtools-mcp --external:@modelcontextprotocol/sdk",
     "build:pkg": "pkg dist/bundle.js --target node20 --output dist/shellchrome",
     "build:nexe": "nexe dist/bundle.js --target node20 --output dist/shellchrome"
   },
