--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "shellchrome",
   "version": "1.0.0",
   "description": "基于 chrome-devtools-mcp 的 Node.js 中文控制台浏览器",
+  "type": "module",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
     "start": "node index.js",
-    "bundle": "esbuild index.js --bundle --platform=node --target=node20 --outfile=dist/bundle.js --external:sharp --external:tesseract.js",
+    "bundle": "esbuild index.js --bundle --platform=node --target=node20 --format=esm --outfile=dist/bundle.js --external:sharp --external:tesseract.js",
     "build:pkg": "pkg dist/bundle.js --target node20 --output dist/shellchrome",
     "build:nexe": "nexe dist/bundle.js --target node20 --output dist/shellchrome"
   },
