--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "shellchrome",
   "version": "1.0.0",
-  "description": "基于 chrome-devtools-mcp 的 Node.js 中文控制台浏览器",
+  "description": "基于 Puppeteer 的 Node.js 中文控制台浏览器",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
     "start": "node index.js",
-    "bundle": "esbuild index.js --bundle --platform=node --target=node20 --format=cjs --outfile=dist/bundle.cjs --external:jimp --external:child_process --external:fs --external:path --external:url",
+    "bundle": "esbuild index.js --bundle --platform=node --target=node20 --format=cjs --outfile=dist/bundle.cjs --external:puppeteer-core --external:child_process --external:fs --external:path --external:url",
     "build:nexe": "nexe dist/bundle.cjs --target node20 --output dist/shellchrome"
   },
   "keywords": [
@@ -14,14 +14,14 @@
     "devtools",
     "browser",
     "automation",
-    "console"
+    "console",
+    "puppeteer"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.26.0",
-    "chrome-devtools-mcp": "^0.17.3",
-    "jimp": "^1.6.0"
+    "jimp": "^1.6.0",
+    "puppeteer-core": "^24.0.0"
   },
   "devDependencies": {
     "esbuild": "latest",
