--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "bundle": "esbuild index.js --bundle --platform=node --target=node20 --format=cjs --outfile=dist/bundle.cjs --external:puppeteer-core --external:child_process --external:fs --external:path --external:url",
-    "build:nexe": "nexe dist/bundle.cjs --target node20 --output dist/shellchrome"
+    "build:nexe": "node scripts/copy-bundle.js && nexe bundle.cjs --target node20 --output dist/shellchrome && node scripts/cleanup.js"
   },
   "keywords": [
     "chrome",
